--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
-    color: #222222;
+    color: #161616;
     font-size: 1em;
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
+h1 {color: rgb(255, 24, 132);}
 
 .content-footer,
 .masthead-heading,
@@ -66,5 +67,6 @@ section > h1 {
 }
 .social > li {
   display: inline-block;
-  margin: 0 5px;
+  margin: 0 10px;
 }
+#logo {align-content: center;}
